# electricity_simulation

./: LICENSE  parametry.xlsx  pyproject.toml  sandbox.ipynb  utils.py
