[tool.poetry]
name = "mc-vyberko"
version = "0.1.0"
description = "Projekt s ukazkou Monte Carlo pristupu pro prezentaci u vyberka"
authors = ["Petr Lousa <lousapetr@seznam.cz>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^2.1.1"
numpy = "^1.26.0"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
openpyxl = "^3.1.2"
black = {extras = ["jupyter"], version = "^23.9.1"}
flake8-pyproject = "^1.2.3"
plotly = "^5.17.0"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.py$|\.ipynb$'

[tool.flake8]
ignore = []
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true
